Prevent pop-up bubbles for managed networks from being clipped
In the network list on the settings page, the pop-up bubble for a managed
network has that network's list entry as its parent. The list entry must
allow overflow to be visible so that the bubble does not get clipped.

BUG=243659
TEST=Manual

Review URL: https://chromiumcodereview.appspot.com/15690006

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@202753 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0ddde4beee7380871705af7dcca75f8eabbe664f

--- a/chrome/browser/resources/options/browser_options.css
+++ b/chrome/browser/resources/options/browser_options.css
@@ -159,6 +159,7 @@ input[type='range'] {
 .network-group {
   -webkit-box-orient: horizontal;
   height: 42px;
+  overflow: visible;
 }
 
 list:not([disabled]) > .network-group:hover,
